[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/hexa_figure.gd" type="Script" id=1]
[ext_resource path="res://scenes/point.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphics/sprites/main_hexa/hexa_main_figure_1.png" type="Texture" id=3]
[ext_resource path="res://graphics/sprites/main_hexa/hexa_main_figure_0.png" type="Texture" id=4]
[ext_resource path="res://graphics/sprites/main_hexa/hexa_main_figure_3.png" type="Texture" id=5]
[ext_resource path="res://graphics/sprites/hexa/hexa_figure_3.png" type="Texture" id=6]
[ext_resource path="res://graphics/sprites/main_hexa/hexa_main_figure_2.png" type="Texture" id=7]
[ext_resource path="res://graphics/sprites/increasing.png" type="Texture" id=8]
[ext_resource path="res://graphics/sprites/decreasing.png" type="Texture" id=9]
[ext_resource path="res://Autumn Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://animations/level_up_main.tres" type="Animation" id=11]
[ext_resource path="res://audio/sound_fx/lvl_up2.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 140
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=2]
resource_name = "main_about_merge"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 20.0, 0.0 ]
}

[node name="hexa_main_figure" type="KinematicBody2D"]
z_index = 3
script = ExtResource( 1 )
point = ExtResource( 2 )
type = 4

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="sprite2" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="shade_transp" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="ind_abtomrg" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )

[node name="sprite4" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="increasing_level" type="Sprite" parent="."]
visible = false
position = Vector2( 49.6847, -75.7488 )
texture = ExtResource( 8 )

[node name="decreasing_level" type="Sprite" parent="."]
visible = false
position = Vector2( 49.6847, 76.973 )
texture = ExtResource( 9 )

[node name="label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.67451 )
margin_left = -70.0
margin_top = -90.0
margin_right = 70.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/level_up_main = ExtResource( 11 )
anims/main_about_merge = SubResource( 2 )

[node name="audio_stream_player_2d" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
bus = "Sound"
